testsuite/tests/properties/invalid_struct_update/test.out
== Not a struct ==
test.py:30: error: Struct expected, got BigInt

== Invalid field ==
test.py:33: error: Invalid KV field: nosuchfield

== Invalid type ==
test.py:30: error: Wrong type for field key: expected Character.array, got BigInt

Done
